feat: 코드 스멜 제거
Former-commit-id: 130775f36d05bc4241c9a7b2e299effd6b56c62a